
** Notice: Version 1.0.2 - 1.0.6 and 1.0.9 - 1.1.1 were never released
           to the public.

Version 1.2.4
- --------------------------------

  * Fixed bug in waitpid handling in daemon mode again. #10008
    Mentioned by Simon Baatz

  * Reworked logging:

      - If running in debug mode ftp.proxy will write it's messages 
	hat went formerly to syslog to stderr now.

      - When ftp.proxy terminates succesfully or with an error it will
	log a status line beginning with either `+OK:' or `-ERR:'
	followed by session specific information like FTP client, server
	and user


Version 1.2.3 - 30072004asg
- --------------------------------

  * Fixed bug in waitpid handling in daemon mode.

  * Added optional xferlog logging.
  
  * Added -q option to set the source IP of the outgoing control
    connection (which set also the IP for data connections).


Version 1.2.2 - 16122003asg
- --------------------------------

  * Fixed a error in ending an connection after receiving "QUIT".

  * Added support for configuration files. Two new parameters are
    added for this. (-f and -F)

  * renamed `dcp' to `ctp' because we thought that `connection translation
    programs' gives a better idea of what the really do. 


Version 1.2.1 - 19082003asg
- --------------------------------

  * Fixed a bug in dologin.
    Now the use of ftp.proxy with a fixed server works again.


Version 1.2.0 - 11072003asg
- --------------------------------

  * Looking in this file this numbering scheme displeased me.
    From now on every beta release get a subnumber and official 
    releases a major number.
    So this new release will start with 1.2.0


Version 1.1.7.pre3 - 09072003asg
- --------------------------------

  * Fixed missing line in the do_login function. Could solve unexpected
    behaviour of ftp.proxy.
    Mentioned by Michael A. Meiszl and Rasca Gmelch.


Version 1.1.7.pre2 - 06042003asg
- --------------------------------
