@@ -1,7 +1,7 @@
 
 Begin3
 Title:			ftpproxy
-Version:		1.2.3
+Version:		1.2.4
 Entered-date:		30 July 2004
 Description:		FTP proxy with optional access and command control
 			and client monitoring.
