@@ -4,7 +4,7 @@
     File: ftpproxy/ip-lib.c
 
     Copyright (C) 1999  Wolfgang Zekoll  <wzk@quietsche-entchen.de>
-    Copyright (C) 2000, 2003  Andreas Schoenberg  <asg@ftpproxy.org>
+    Copyright (C) 2000, 2005  Andreas Schoenberg  <asg@ftpproxy.org>
   
     This software is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
